# htr-torch-album

./: .gitignore  README.md  char_map.csv  char_map_15.csv  char_map_a_z.csv  char_map_lim.csv  char_map_short.csv  data.py  main.py  pyproject.toml
files/: TextTransform.py  config.py  d2l.py  data.py  dataset.py  functions.py  model.py  model_bbox.py  replay_dataset.py  test_train.py  transform.py
mystuff/: functions.py
