[tool.poetry]
name = "htr-torch"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
numpy = "^1.26.4"
scikit-image = "^0.22.0"
matplotlib = "^3.8.3"
torchvision = "^0.17.1"
torchinfo = "^1.8.0"
torchview = "^0.2.6"
graphviz = "^0.20.3"
wakepy = "^0.7.2"
torchlens = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
