[tool.poetry]
name = "htr-torch-alb"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
torchvision = "^0.17.1"
wakepy = "^0.7.2"
torchlens = "^0.1.12"
jiwer = "^3.0.4"
albumentations = "1.4.23"
pillow = "^10.4.0"
torchinfo = "^1.8.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
