[tool.poetry]
name = "htr-torch-album"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
wakepy = "^0.7.2"
jiwer = "^3.0.4"
pillow = "^10.4.0"
scikit-learn = "^1.5.2"
torch = "^2.5.1"
torchinfo = "^1.8.0"
torchvision = "^0.20.1"
torchlens = "^0.1.24"
albumentations = "1.4.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
